--- a/assets/scss/index.css
+++ b/assets/scss/index.css
@@ -1,1 +1,9 @@
-/*# sourceMappingURL=index.css.map */
+body {
+  display: flex;
+  justify-content: center;
+}
+
+#text-input {
+  width: 90vw;
+  height: 80vh;
+}/*# sourceMappingURL=index.css.map */
