--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,1 +1,31 @@
-@import "header";
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+body{
+  display: flex;
+  justify-content: center;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  .options{
+    display: flex;
+    gap: 15px;
+    margin-top: 40px;
+    .option-button{
+      padding: 5px;
+    }
+  }
+  #text-input{
+    width: 88vw;
+    height: 75vh;
+    outline: none;
+    border: black 1px solid;
+    padding: 20px;
+  }
+}
