just left * bug and some more functionalities just starting to add tab button

--- a/assets/scss/index.css
+++ b/assets/scss/index.css
@@ -9,6 +9,10 @@ body {
   justify-content: center;
 }
 
+.bolder {
+  font-weight: bold;
+}
+
 .container {
   display: flex;
   flex-direction: column;
