--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -7,7 +7,9 @@ body{
   display: flex;
   justify-content: center;
 }
-
+.bolder{
+  font-weight: bold;
+}
 .container{
   display: flex;
   flex-direction: column;
