--- a/assets/scss/index.css
+++ b/assets/scss/index.css
@@ -3,11 +3,17 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Arial;
+  font-size: 16px;
 }
 
 body {
   display: flex;
   justify-content: center;
+}
+
+#format {
+  width: 100px;
+  height: 30px;
 }
 
 .bolder {
@@ -18,9 +24,11 @@ body {
   display: flex;
   flex-direction: column;
   gap: 40px;
+  width: 80%;
 }
 .container .options {
   display: flex;
+  flex-wrap: wrap;
   gap: 15px;
   margin-top: 40px;
 }
@@ -28,8 +36,7 @@ body {
   padding: 5px;
 }
 .container #text-input {
-  width: 88vw;
-  height: 75vh;
+  height: 70vh;
   outline: none;
   border: black 1px solid;
   padding: 20px;
