--- a/assets/scss/index.css
+++ b/assets/scss/index.css
@@ -9,20 +9,13 @@
 body {
   display: flex;
   justify-content: center;
-}
-
-.btnstyle {
-  width: 100px;
-  height: 30px;
-}
-
-.bolder {
-  font-weight: bold;
+  background-color: rgb(202, 202, 202);
 }
 
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 40px;
   width: 85%;
 }
@@ -33,11 +26,34 @@ body {
   margin-top: 40px;
 }
 .container .options .option-button {
-  padding: 5px;
+  padding: 5px 9px;
+  border-radius: 4px;
+}
+.container .options .option-advanced {
+  border-radius: 4px;
+  border: 2px solid;
+  background-color: #F0F0F0;
+}
+.container .options .input-wrapper {
+  display: flex;
+  padding: 3px;
+  align-items: center;
+  background-color: #F0F0F0;
+  border: 2px solid black;
+  border-radius: 4px;
 }
 .container #text-input {
-  height: 70vh;
+  width: 100%;
+  min-height: 70vh;
   outline: none;
-  border: black 1px solid;
+  border: 1px solid black;
   padding: 20px;
+  overflow-y: auto;
+  background-color: white;
+  border-radius: 10px;
+}
+.container .btnstyle {
+  width: 100px;
+  height: 30px;
+  border-radius: 4px;
 }/*# sourceMappingURL=index.css.map */
