--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,39 +1,62 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: Arial;
   font-size: 16px;
 }
-body{
+
+body {
   display: flex;
   justify-content: center;
+  background-color: rgb(202, 202, 202);
 }
-.btnstyle{
-  width: 100px;
-  height: 30px;
-}
-.bolder{
-  font-weight: bold;
-}
-.container{
+
+.container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 40px;
   width: 85%;
-  .options{
+
+  .options {
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
     margin-top: 40px;
-    .option-button{
-      padding: 5px;
+
+    .option-button {
+      padding: 5px 9px;
+      border-radius: 4px;
+    }
+    .option-advanced {
+      border-radius: 4px;
+      border: 2px solid;
+      background-color: #F0F0F0;
+    }
+    .input-wrapper{
+      display: flex;
+      padding: 3px;
+      align-items: center;
+      background-color: #F0F0F0;
+      border: 2px solid black;
+      border-radius: 4px;
     }
   }
-  #text-input{
-    height: 70vh;
+
+  #text-input {
+    width: 100%;
+    min-height: 70vh;
     outline: none;
-    border: black 1px solid;
+    border: 1px solid black;
     padding: 20px;
+    overflow-y: auto;
+    background-color: white;
+    border-radius: 10px;
   }
+  .btnstyle {
+    width: 100px;
+    height: 30px;
+    border-radius: 4px;
+  }  
 }
