--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -12,11 +12,30 @@ body {
   background-color: rgb(202, 202, 202);
 }
 
+.tool { 
+  width: 30px;
+  height: 30px;
+  position: fixed;
+  top: 40px;
+  transition: all 0.3s;
+  cursor: pointer;
+  &:hover{
+    scale: (1.3);
+  }
+}
+.left{
+  left: 40px;
+}
+.right{
+  right: 40px;
+}
+
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 40px;
+  gap: 30px;
   width: 85%;
 
   .options {
@@ -45,6 +64,7 @@ body {
   }
 
   #text-input {
+    margin-top: 10px;
     width: 100%;
     min-height: 70vh;
     outline: none;
@@ -54,9 +74,44 @@ body {
     background-color: white;
     border-radius: 10px;
   }
+  #download{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 36px;
+    width: 120px;
+    gap: 5px;
+    img{
+      margin-top: 2px;
+      width: 20px;
+      height: 24px;
+    }
+  }
   .btnstyle {
     width: 100px;
     height: 30px;
     border-radius: 4px;
   }  
+}
+
+#infoContent{
+  width: 55%;
+  background-color: #F0F0F0;
+  padding: 40px;
+  border-radius: 10px;
+  z-index: 1111;
+  position: fixed;
+  justify-content: center;
+  top: 100px;
+}
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); 
+  z-index: 1000; 
+  clip-path: inset(0); 
+  transition: opacity 0.3s; 
 }
