--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -29,6 +29,27 @@ body {
 .right{
   right: 40px;
 }
+
+.buttons{
+  display: flex;
+  gap: 30px;
+  .load{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 36px;
+    width: 140px;
+    gap: 5px;
+    border-radius: 4px;
+    cursor: pointer;
+    img{
+      margin-top: 2px;
+      width: 20px;
+      height: 24px;
+    }
+  }
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -41,15 +62,16 @@ body {
     flex-wrap: wrap;
     gap: 15px;
     margin-top: 40px;
-
     .option-button {
       padding: 5px 9px;
       border-radius: 4px;
+      cursor: pointer;
     }
     .option-advanced {
       border-radius: 4px;
       border: 2px solid;
       background-color: #F0F0F0;
+      cursor: pointer;
     }
     .input-wrapper{
       display: flex;
@@ -58,6 +80,7 @@ body {
       background-color: #F0F0F0;
       border: 2px solid black;
       border-radius: 4px;
+      cursor: pointer;
     }
   }
 
@@ -72,24 +95,7 @@ body {
     background-color: white;
     border-radius: 10px;
   }
-  #download{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 36px;
-    width: 120px;
-    gap: 5px;
-    img{
-      margin-top: 2px;
-      width: 20px;
-      height: 24px;
-    }
-  }
-  .btnstyle {
-    width: 100px;
-    height: 30px;
-    border-radius: 4px;
-  }  
+
 }
 
 #infoContent{
