--- a/assets/scss/index.css
+++ b/assets/scss/index.css
@@ -32,6 +32,26 @@ body {
   right: 40px;
 }
 
+.buttons {
+  display: flex;
+  gap: 30px;
+}
+.buttons .load {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 36px;
+  width: 140px;
+  gap: 5px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.buttons .load img {
+  margin-top: 2px;
+  width: 20px;
+  height: 24px;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -48,11 +68,13 @@ body {
 .container .options .option-button {
   padding: 5px 9px;
   border-radius: 4px;
+  cursor: pointer;
 }
 .container .options .option-advanced {
   border-radius: 4px;
   border: 2px solid;
   background-color: #F0F0F0;
+  cursor: pointer;
 }
 .container .options .input-wrapper {
   display: flex;
@@ -61,6 +83,7 @@ body {
   background-color: #F0F0F0;
   border: 2px solid black;
   border-radius: 4px;
+  cursor: pointer;
 }
 .container #text-input {
   margin-top: 10px;
@@ -72,24 +95,6 @@ body {
   overflow-y: auto;
   background-color: white;
   border-radius: 10px;
-}
-.container #download {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 36px;
-  width: 120px;
-  gap: 5px;
-}
-.container #download img {
-  margin-top: 2px;
-  width: 20px;
-  height: 24px;
-}
-.container .btnstyle {
-  width: 100px;
-  height: 30px;
-  border-radius: 4px;
 }
 
 #infoContent {
