--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -42,6 +42,10 @@ body {
     gap: 5px;
     border-radius: 4px;
     cursor: pointer;
+    transition: all 0.1s;
+    &:hover{
+      scale: (1.1);
+    }
     img{
       margin-top: 2px;
       width: 20px;
@@ -66,12 +70,20 @@ body {
       padding: 5px 9px;
       border-radius: 4px;
       cursor: pointer;
+      transition: all 0.1s;
+      &:hover{
+        scale: (1.1);
+      }
     }
     .option-advanced {
       border-radius: 4px;
       border: 2px solid;
       background-color: #F0F0F0;
       cursor: pointer;
+      transition: all 0.1s;
+      &:hover{
+        scale: (1.1);
+      }
     }
     .input-wrapper{
       display: flex;
@@ -80,7 +92,11 @@ body {
       background-color: #F0F0F0;
       border: 2px solid black;
       border-radius: 4px;
+      transition: all 0.1s;
       cursor: pointer;
+      &:hover{
+        scale: (1.1);
+      }
     }
   }
 
