--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -45,6 +45,7 @@ body {
     transition: all 0.1s;
     &:hover{
       scale: (1.1);
+      background-color: #dfdfdf;
     }
     img{
       margin-top: 2px;
@@ -73,6 +74,7 @@ body {
       transition: all 0.1s;
       &:hover{
         scale: (1.1);
+        background-color: #dfdfdf;
       }
     }
     .option-advanced {
@@ -83,6 +85,7 @@ body {
       transition: all 0.1s;
       &:hover{
         scale: (1.1);
+        background-color: #dfdfdf;
       }
     }
     .input-wrapper{
@@ -96,6 +99,7 @@ body {
       cursor: pointer;
       &:hover{
         scale: (1.1);
+        background-color: #dfdfdf;
       }
     }
   }
@@ -135,6 +139,5 @@ body {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7); 
   z-index: 1000; 
-  clip-path: inset(0); 
   transition: opacity 0.3s; 
 }
