--- a/assets/scss/index.css
+++ b/assets/scss/index.css
@@ -105,7 +105,7 @@ body {
   scale: 1.1;
   background-color: #dfdfdf;
 }
-.container #text-input {
+.container #textArea {
   margin-top: 10px;
   width: 100%;
   min-height: 70vh;
